Revision history for LWP-ConsoleLogger

{{$NEXT}}

0.000026  2016-06-09 16:22:18-04:00 America/Toronto
    - Fixes test that broke under scalar_quotes  => q{'}

0.000025  2016-06-09 09:29:08-04:00 America/Toronto
    - Don't redact JSON with vendor-specific content types.

0.000024  2016-05-16 12:15:53-04:00 America/Toronto
    - Don't print gzipped and other non-text content to the screen.

0.000023  2016-04-15 15:22:01-04:00 America/Toronto
    - Avoid warning when Content-Type header is not set.

0.000022  2016-01-29 12:19:00-05:00 America/Toronto
    - Adds minimum versions for Data::Printer and JSON::MaybeXS.

0.000021  2016-01-18 11:58:04-05:00 America/Toronto
    - Fixes an occasional warning in body parsing.

0.000020  2015-06-03 18:14:25-04:00 America/Toronto
    - Really fix failures under Perl 5.22 (reported by Andreas König)

0.000019  2015-05-29 18:02:07-04:00 America/Toronto
    - Ensure module works still under both perl 5.21 and Data::Printer > 0.35
      https://github.com/oalders/lwp-consolelogger/issues/3 (reported by Slaven
      Rezić and solution proposed by Breno G. de Oliveira).

0.000018  2015-05-27 16:52:26-04:00 America/Toronto
    - Adds deserializing of HTML and JSON in request body.

0.000017  2015-05-26 17:02:41-04:00 America/Toronto
    - Fixes examples/html-in-text.pl to show how to bypass
      HTML::FormatText::Lynx formating.

0.000016  2015-05-26 14:01:03-04:00 America/Toronto
    - Adds a nice HTML text_pre_filter to Easy if HTML::FormatText::Lynx is
      installed.

0.000015  2015-04-16 23:49:16+02:00 Europe/Berlin
    - Converted from Moose to Moo
    - Now uses HTTP::Body to parse POST params

0.000014  2015-03-18 18:09:23-04:00 America/Toronto
    - text_pre_filter subs should now return a content type

0.000013  2015-02-04 18:30:17-05:00 America/Toronto
    - Adds logging levels and more fine grained control over what gets logged

0.000012  2014-09-24 00:09:28-04:00 America/Toronto